Fix TemplateObject title clipping

--- a/ui/template-explorer.reel/content/template-object-header.reel/template-object-header.css
+++ b/ui/template-explorer.reel/content/template-object-header.reel/template-object-header.css
@@ -45,7 +45,7 @@
 .TemplateObjectHeader-title {
     margin: 0;
     font-size: 13px;
-    line-height: 14px;
+    line-height: 15px;
     color: hsl(0, 0%, 30%);
     overflow: hidden;
     text-overflow: ellipsis;
